[metadata]
name = texture
version = 0.0.0
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = A collection of utility functions for analyzing crystallographic texture maps.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fable-3dxrd/texture
project_urls =
    Documentation = https://fable-3dxrd.github.io/texture/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8,<3.11
